fix: keep sub header from collapsing on mobile screens

--- a/src/Promotions/ReportsWidgetBanner/components/WidgetBanner/styles.scss
+++ b/src/Promotions/ReportsWidgetBanner/components/WidgetBanner/styles.scss
@@ -13,14 +13,15 @@
             font-size: 1.5rem;
             color: #fff4f2;
             font-weight: 700;
-            margin: 0;
+            line-height: 1;
         }
 
         &__secondary {
             font-size: 1.25rem;
             color: #fff4f2;
             font-weight: 500;
-            line-height: 0;
+            line-height: normal;
+            padding: 0;
         }
     }
 
@@ -56,3 +57,4 @@
         }
     }
 }
+
